Bug 417810 - Frequently Visited Pages Disappear From Location Bar Autocomplete. r=dietrich, b-ff3=beltzner